logs/alienbuild.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alienbuild'...
Compiling './lib/python3.5/site-packages/alienbuild/aliencommon.py'...
***   File "./lib/python3.5/site-packages/alienbuild/aliencommon.py", line 70
    raise NameError, 'Did not find path for "%s"' % executable
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alienbuild/color.py'...
***   File "./lib/python3.5/site-packages/alienbuild/color.py", line 99
    print '%s%s %s%s' % ( EscapeString, o, filename, EndString )
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alienbuild/command.py'...
***   File "./lib/python3.5/site-packages/alienbuild/command.py", line 88
    print warnings
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/alienbuild/package.py'...
***   File "./lib/python3.5/site-packages/alienbuild/package.py", line 233
    raise NameError, 'Did not find filetype for package file "%s"' % file
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alienbuild/win32_prototypes.py'...
***   File "./lib/python3.5/site-packages/alienbuild/win32_prototypes.py", line 115
    print standardOut
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/alienbuild-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
